<resources>
    <string name="app_name">StudyCard</string>

    <string name="http_no_connection">Pas de connexion</string>
    <string name="request_error">Une erreur est survenue</string>
    <string name="technical_error">Une erreur inattendue est survenue, veuillez réessayer plus tard.</string>
    <string name="not_found">Contenu non trouvé</string>
    <string name="pseudo">pseudo</string>
    <string name="account_password">mot de passe</string>
    <string name="login">Connexion</string>
    <string name="register">S\'inscrire</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenue</string>
    <string name="invalid_username">Pseudo invalide</string>
    <string name="invalid_password">Mot de passe invalide</string>
    <string name="login_failed">La connexion a échoué</string>
    <string name="menu_home">Accueil</string>
    <string name="deck_name">Nom du paquet</string>
    <string name="decks">Paquets</string>
    <string name="no_deck">Aucun paquet à étudier</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revision_deck">Réviser ce paquet</string>
    <string name="card_text">Texte sur la carte</string>
    <string name="mail_adress">Adresse mail</string>
    <string name="personnal_informations">Informations personnelles</string>
    <string name="logout">Se déconnecter</string>
    <string name="to_study">A étudier</string>
    <string name="zero">0</string>
    <string name="acquired">Acquise</string>
    <string name="revised_deck">Félicitations, vous avez terminé d\'étudier ce paquet !</string>
    <string name="start">Commencer</string>
    <string name="no_cards">Ce paquet est vide</string>
    <string name="to_study_cards">Fiche(s) à étudier</string>
    <string name="start_revison">Commencer la révision</string>
    <string name="incorrect_login_message">Pseudo ou mot de passe incorrect</string>
    <string name="study_deck">Ré-étudier le paquet</string>
    <string name="deck_finished_message">Félicitations, vous avez terminé d\'étudier ce paquet !</string>
    <string name="cards_acquired">Fiche(s) acquise(s)</string>
    <string name="front_card_ext">"Texte sur le recto de la carte "</string>
    <string name="display_response">Afficher la réponse</string>
    <string name="loading">Chargement...</string>
    <string name="again">Encore</string>
    <string name="difficult">Difficile</string>
    <string name="correct">Correcte</string>
    <string name="response">Réponse</string>
    <string name="add_fonctionnality">Fonctionnalité supplémentaire à développer</string>
    <string name="leave">Quitter</string>

</resources>