<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.card.StudyCardFragment">

    <ScrollView
        android:id="@+id/deck_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/cards_informations_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/front_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
                android:id="@+id/line_drawable"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:src="@drawable/line"
                app:layout_constraintBottom_toBottomOf="@id/front_card_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/display_response_button" />

        <TextView
            android:id="@+id/back_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/line_drawable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/revision_category_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/difficulty_order_0"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="start"
                android:textSize="5sp"
                android:minHeight="4dip"
                android:minWidth="4dip"
                android:backgroundTint="@color/grey_dark"
                android:enabled="true"
                android:text="@string/again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/difficulty_order_1"/>

            <Button
                android:id="@+id/difficulty_order_1"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:width="@dimen/cardview_compat_inset_shadow"
                android:backgroundTint="@color/purple"
                android:enabled="true"
                android:text="@string/difficult"
                android:textSize="5sp"
                android:minHeight="4dip"
                android:minWidth="4dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.323"
                app:layout_constraintLeft_toRightOf="@id/difficulty_order_0"
                app:layout_constraintRight_toLeftOf="@id/difficulty_order_1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/difficulty_order_2"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:width="@dimen/cardview_compat_inset_shadow"
                android:backgroundTint="@color/light_blue"
                android:enabled="true"
                android:text="@string/correct"
                android:textSize="5sp"
                android:minHeight="4dip"
                android:minWidth="4dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.628"
                app:layout_constraintLeft_toRightOf="@id/difficulty_order_1"
                app:layout_constraintRight_toLeftOf="@id/difficulty_order_3"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/difficulty_order_3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:width="@dimen/cardview_compat_inset_shadow"
                android:backgroundTint="@color/green"
                android:enabled="true"
                android:text="@string/acquired"
                android:textSize="5sp"
                android:minHeight="4dip"
                android:minWidth="4dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toRightOf="@id/difficulty_order_2"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/leave"
            app:layout_constraintBottom_toBottomOf="@id/display_response_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:contentDescription="@string/http_no_connection"
                tools:srcCompat="@drawable/ic_no_wifi" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/http_no_connection" />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
