<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.deck.DeckFragment">


    <LinearLayout
        android:id="@+id/revision_deck_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/revision_deck_informations_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/revision_deck_container" />

        <LinearLayout
            android:id="@+id/deck_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/revision_deck_informations_separator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/to_study_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginBottom="16dp"
                    android:enabled="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/to_study"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/nb_cards_to_study"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nb_cards_to_study"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:textColor="@color/grey_dark"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/to_study_button"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/acquired_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:enabled="true"
                    android:text="@string/acquired"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/nb_cards_acquired"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/nb_cards_acquired"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@color/grey_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/acquired_button"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/revised_deck_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/deck_container"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:backgroundTint="@color/deep_blue"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/revised_deck_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/menu_home"
            app:layout_constraintBottom_toBottomOf="@id/start_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/http_no_connection"
            tools:srcCompat="@drawable/ic_no_wifi" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/http_no_connection" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>